# VRPG

./: .gitignore  CMakeLists.txt  README.md  Roadmap.md  asset.cfg  config.cfg
Asset/Model/: Player.mesh
Asset/Playground/Sample02_Triangle/: pixel.hlsl  vertex.hlsl
Asset/Playground/Sample05_Camera/: pixel.hlsl  vertex.hlsl
Asset/Shader/: ForwardShadowPixel.hlsl  ForwardShadowVertex.hlsl
Asset/Shader/BlockEffect/DiffuseHollow/: ForwardVertex.hlsl
Asset/Shader/BlockEffect/DiffuseSolid/: ForwardPixel.hlsl
Asset/Shader/BlockEffect/GrassLike/: ForwardPixel.hlsl  ShadowVertex.hlsl
Asset/Shader/Mesh/DiffuseSolid/: ForwardPixel.hlsl  ForwardVertex.hlsl  ShadowPixel.hlsl
Asset/World/Shader/: ForwardShadowPixel.hlsl
Asset/World/Shader/BlockEffect/: Common.hlsl  DefaultPixel.hlsl  DefaultVertex.hlsl  DiffuseHollowPixel.hlsl  DiffuseHollowVertex.hlsl  DiffusePixel.hlsl  DiffuseSolidPixel.hlsl  DiffuseSolidVertex.hlsl  DiffuseVertex.hlsl  ShadowPixel.hlsl  ShadowVertex.hlsl  TransparentPixel.hlsl  TransparentVertex.hlsl
Asset/World/Shader/BlockEffect/Default/: DefaultPixel.hlsl  ForwardPixel.hlsl  ForwardVertex.hlsl  ShadowVertex.hlsl
Asset/World/Shader/BlockEffect/DiffuseHollow/: DiffuseHollowPixel.hlsl  ForwardPixel.hlsl  ForwardVertex.hlsl  ShadowPixel.hlsl
Asset/World/Shader/BlockEffect/DiffuseSolid/: DiffuseSolidPixel.hlsl  ForwardPixel.hlsl  ForwardVertex.hlsl
Asset/World/Shader/BlockEffect/GrassLike/: ForwardPixel.hlsl  ForwardVertex.hlsl
Asset/World/Shader/BlockEffect/Transparent/: ForwardPixel.hlsl  ForwardVertex.hlsl  TransparentPixel.hlsl
Asset/World/Shader/Mesh/DiffuseSolid/: ForwardVertex.hlsl
Lib/DirectXTK/: CMakeLists.txt
Lib/DirectXTK/Inc/DirectXTK/: Keyboard.h
Lib/ImGui/: CMakeLists.txt
Lib/assimp/: CMakeLists.txt
Lib/assimp/code/: CMakeLists.txt
Lib/libconfig/: CMakeLists.txt
Lib/libconfig/lib/: CMakeLists.txt
Src/Base/: CMakeLists.txt
Src/Base/Include/VRPG/Base/: Base.h  Common.h  Event.h  KeyCode.h  Keyboard.h  Mouse.h  Singleton.h  Window.h
Src/Base/Include/VRPG/Base/D3D/: BlendState.h  ComObjectHolder.h  ConstantBuffer.h  D3DCreate.h  Effect.h  Shader.h  (+10 more)
Src/Base/Src/: D3DInit.cpp  D3DInit.h  KeyCode.cpp  Main.cpp  Mouse.cpp  Window.cpp
Src/Base/Src/D3D/: D3DCreate.cpp  D3DInit.cpp  Texture2DLoader.cpp
Src/Game/: CMakeLists.txt
Src/Game/Include/VRPG/Game/: Common.h  Game.h
Src/Game/Src/: Game.cpp  Main.cpp
Src/Game/Src/AnimatedMesh/: DiffuseSolidMesh.cpp
Src/Game/Src/AnimatedMesh/BasicEffect/: DiffuseSolidMeshEffect.cpp
Src/Game/Src/Block/: BlockDescription.cpp  BlockEffect.cpp  BuiltinBlock.cpp
Src/Game/Src/Block/BasicCollision/: BoxCollision.cpp  VoidCollision.cpp
Src/Game/Src/Block/BasicDescription/: DefaultBoxDescription.cpp  DiffuseHollowBoxDescription.cpp  DiffuseSolidBoxDescription.cpp  GrassLikeDescription.cpp  TransparentBoxDescription.cpp  TransparentLiquidDescription.cpp
Src/Game/Src/Block/BasicEffect/: DefaultBlockEffect.cpp  DiffuseHollowBlockEffect.cpp  DiffuseSolidBlockEffect.cpp  GrassLikeEffect.cpp  ShadowMappingUtility.cpp  TransparentBlockEffect.cpp
Src/Game/Src/Block/BuiltinBlock/: BuiltinBlock.cpp
Src/Game/Src/Camera/: DefaultCamera.cpp
Src/Game/Src/Chunk/: Chunk.cpp  ChunkLightPropagation.cpp  ChunkLoader.cpp  ChunkManager.cpp  ChunkRenderer.cpp  LightPropagation.cpp
Src/Game/Src/Config/: GlobalConfig.cpp
Src/Game/Src/Land/: FlatLandGenerator.cpp  LandGenerator.cpp
Src/Game/Src/Mesh/: DiffuseSolidMesh.cpp
Src/Game/Src/Mesh/BasicEffect/: DiffuseSolidMeshEffect.cpp
Src/Game/Src/Misc/: CascadeShadowMapping.cpp  ChosenWireframe.cpp  ShadowMappingRasterizerState.cpp  ShadowMappingUtility.cpp
Src/Game/Src/Player/: Player.cpp
Src/Game/Src/Player/Camera/: DefaultCamera.cpp
Src/Game/Src/World/Block/: BlockDescription.cpp  BlockEffect.cpp  BuiltinBlock.cpp
Src/Game/Src/World/BlockUpdater/: LiquidUpdater.cpp
Src/Game/Src/World/Chunk/: Chunk.cpp  ChunkLightPropagation.cpp  ChunkLoader.cpp  ChunkManager.cpp  ChunkRenderer.cpp
Src/Game/Src/World/Land/: FlatLandGenerator.cpp  LandGenerator.cpp
Src/Mesh/: CMakeLists.txt
Src/Mesh/Include/VRPG/Mesh/: Common.h  Mesh.h  MeshComponent.h  SkeletonAnimation.h  StaticSkeleton.h  Utility.h
Src/Mesh/Src/: Mesh.cpp  MeshComponent.cpp  SkeletonAnimation.cpp  StaticSkeleton.cpp
Src/MeshConverter/: CMakeLists.txt
Src/MeshConverter/Include/VRPG/MeshConverter/: Common.h  MeshLoader.h
Src/MeshConverter/Src/: Main.cpp  MeshLoader.cpp
Src/Playground/: CMakeLists.txt
Src/Playground/Sample00_Common/: SampleApp.h
Src/Playground/Sample01_Window/: CMakeLists.txt
Src/Playground/Sample01_Window/Src/: Main.cpp
Src/Playground/Sample02_Triangle/: CMakeLists.txt
Src/Playground/Sample02_Triangle/Src/: Main.cpp
Src/Playground/Sample03_ImGui/: CMakeLists.txt
Src/Playground/Sample03_ImGui/Src/: Main.cpp
Src/Playground/Sample04_Texture/: CMakeLists.txt
Src/Playground/Sample04_Texture/Src/: Main.cpp
Src/Playground/Sample05_Camera/: CMakeLists.txt
Src/Playground/Sample05_Camera/Src/: Main.cpp
Src/Win/: CMakeLists.txt
Src/Win/Include/VRPG/Win/: Common.h  D3DCreate.h  D3DInit.h  Event.h  KeyCode.h  Keyboard.h  Mouse.h  Window.h
Src/Win/Include/VRPG/Win/Shader/: ShaderConstantBuffer.h  ShaderObjectBinding.h
Src/Win/Src/: D3DCreate.cpp  D3DInit.cpp  KeyCode.cpp  Main.cpp  Window.cpp
Src/World/: CMakeLists.txt  Design.md
Src/World/Include/VRPG/World/: Common.h  Game.h
Src/World/Src/: Game.cpp  Main.cpp
Src/World/Src/Block/BasicDescription/: DefaultBlockDescription.cpp  DefaultBoxDescription.cpp  DiffuseBlockDescription.cpp  DiffuseHollowBoxDescription.cpp  DiffuseSolidBoxDescription.cpp  TransparentBoxDescription.cpp
Src/World/Src/Block/BasicEffect/: DefaultBlockEffect.cpp  DiffuseBlockEffect.cpp  DiffuseHollowBlockEffect.cpp  DiffuseSolidBlockEffect.cpp  TransparentBlockEffect.cpp
Src/World/Src/Block/BuiltinBlock/: BuiltinBlock.cpp
Src/World/Src/Camera/: DefaultCamera.cpp
Src/World/Src/Chunk/: Chunk.cpp  ChunkLoader.cpp  ChunkManager.cpp  LightPropagation.cpp
Src/World/Src/Land/: FlatLandGenerator.cpp
(+180 files in other folders)
