CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(VRPG)

############## global properties

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "Options: Debug MinSizeRel Release RelWithDebInfo" FORCE)
ENDIF()

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET(CMAKE_CXX_STANDARD 17)

ADD_DEFINITIONS(-D_SILENCE_CXX17_OLD_ALLOCATOR_MEMBERS_DEPRECATION_WARNING)
ADD_DEFINITIONS(-D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
ADD_DEFINITIONS(-D_UNICODE)

############## submodules

SET(directxtk_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Lib/DirectXTK/Inc")
SET(spdlog_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Lib/spdlog/include")
SET(libconfig_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Lib/libconfig/lib")

ADD_SUBDIRECTORY(Lib/agz-utils)
ADD_SUBDIRECTORY(Lib/DirectXTK)
ADD_SUBDIRECTORY(Lib/libconfig)
ADD_SUBDIRECTORY(Lib/ImGui)

ADD_SUBDIRECTORY(Src/Base)
ADD_SUBDIRECTORY(Src/Game)

SET_TARGET_PROPERTIES(AGZUtils ImGui directxtk libconfig++ PROPERTIES FOLDER "ThirdParty")
