CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(MESH-CONVERTER)

SET(TargetName MeshConverter)

FILE(GLOB_RECURSE TARGET_SRC
        "${PROJECT_SOURCE_DIR}/Src/*.cpp"
        "${PROJECT_SOURCE_DIR}/Src/*.h"
        "${PROJECT_SOURCE_DIR}/Include/*.h"
        "${PROJECT_SOURCE_DIR}/Include/*.inl")
ADD_EXECUTABLE(${TargetName} ${TARGET_SRC})

FOREACH(_SRC IN ITEMS ${TARGET_SRC})
    GET_FILENAME_COMPONENT(TARGET_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/Include/VRPG/${TargetName}" "Include" _GRP_PATH "${TARGET_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/Src" "Src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${PROJECT_SOURCE_DIR}/Include/")
TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${Base_INCLUDE_DIRS}")
TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${Mesh_INCLUDE_DIRS}")
TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${Misc_INCLUDE_DIRS}")
TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${spdlog_INCLUDE_DIRS}")

TARGET_LINK_LIBRARIES(${TargetName} PRIVATE assimp ${Base_LIBRARIES} ${Mesh_LIBRARIES})
