CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(SAMPLE02-TRIANGLE)

SET(TargetName Sample02_Triangle)

FILE(GLOB_RECURSE TARGET_SRC
		"${PROJECT_SOURCE_DIR}/Src/*.cpp"
		"${PROJECT_SOURCE_DIR}/Src/*.h"
		"${PROJECT_SOURCE_DIR}/Include/*.h"
		"${PROJECT_SOURCE_DIR}/Include/*.inl")
ADD_EXECUTABLE(${TargetName} ${TARGET_SRC})

FOREACH(_SRC IN ITEMS ${TARGET_SRC})
    GET_FILENAME_COMPONENT(TARGET_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/Include/${TargetName}" "Include" _GRP_PATH "${TARGET_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/Src" "Src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET ${TargetName} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/../../../")

TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE ${PROJECT_SOURCE_DIR}/Include)
TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE ${Base_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE ${SampleCommon_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(${TargetName} PRIVATE ${Base_LIBRARIES})
